--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -184,7 +184,7 @@
     {% endstyle %}
     
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="//unpkg.com/swiper@8/swiper-bundle.min.css"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;500;600;700&family=Josefin+Sans:wght@400;500;600;700&family=Nunito:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -256,5 +256,9 @@
     {%- if settings.predictive_search_enabled -%}
       <script src="{{ 'predictive-search.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+  
+
+
   </body>
 </html>
