--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -359,6 +359,7 @@
 
 .banner__box > * + .banner__text {
   margin-top: 1.5rem;
+  font-size: 17px;
 }
 
 @media screen and (min-width: 750px) {
@@ -397,6 +398,7 @@
 
 .banner__heading {
   margin-bottom: 0;
+  font-weight: 700;
 }
 
 .banner__box .banner__heading + * {
