--- a/assets/base.css
+++ b/assets/base.css
@@ -569,22 +569,6 @@ table:not([class]) th {
   opacity: 0.7;
 }
 
-a:empty,
-ul:empty,
-dl:empty,
-div:empty,
-section:empty,
-article:empty,
-p:empty,
-h1:empty,
-h2:empty,
-h3:empty,
-h4:empty,
-h5:empty,
-h6:empty {
-  display: none;
-}
-
 .link,
 .customer a {
   cursor: pointer;
@@ -2860,5 +2844,33 @@ details-disclosure > details {
     .product-grid .grid__item {
       padding-bottom: var(--grid-desktop-vertical-spacing);
     }
+  }
+}
+
+
+
+.swiper-button-prev::after, 
+.swiper-button-next::after {
+  display:none;
+}
+
+.swiper-button-prev img, 
+.swiper-button-next img {
+  width: 20px;
+  height: 20px;
+}
+
+
+.swiper-button-next {
+  right:-60px;
+}
+
+.swiper-pagination {
+  bottom: -5px !important;
+}
+
+@media (max-width:576px) {
+  .swiper-button-next {
+    right:20px !important;
   }
 }
